force-app/main/default/objects/school__c/fields/School_address__c.field-meta.xml
<CustomField>
    <fullName>School_address__c</fullName>
    <label>School_address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>