force-app/main/default/objects/school__c/fields/School_email__c.field-meta.xml
<CustomField>
    <fullName>School_email__c</fullName>
    <label>School_email</label>
    <type>Email</type>
</CustomField>