force-app/main/default/objects/school__c/fields/School_phone__c.field-meta.xml
<CustomField>
    <fullName>School_phone__c</fullName>
    <label>School_phone</label>
    <type>Phone</type>
</CustomField>